# Chrom_pred

./: model_train.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/3246966074b14095b3470db5c1be5640/: meta.yaml
mlruns/0/3246966074b14095b3470db5c1be5640/metrics/: accuracy_within_10_percent  final_test_mape  final_train_mape  test_mape  train_mape
mlruns/0/3246966074b14095b3470db5c1be5640/tags/: mlflow.runName
mlruns/0/3aad33a419bf4bfbb6d62e27d94f3e07/: meta.yaml
mlruns/0/3aad33a419bf4bfbb6d62e27d94f3e07/tags/: mlflow.runName
mlruns/0/78d68ec31d2a4dab999210b1197d27bb/: meta.yaml
mlruns/0/78d68ec31d2a4dab999210b1197d27bb/metrics/: accuracy_rf  cv_mean_score  final_test_mape  final_train_mape  r2_score  rmse  rmse_mean
mlruns/0/78d68ec31d2a4dab999210b1197d27bb/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/0/9093e38a7a324bddb728e2966f62f797/: meta.yaml
mlruns/0/9093e38a7a324bddb728e2966f62f797/tags/: mlflow.runName
mlruns/747735610452924730/: meta.yaml
mlruns/747735610452924730/5c6d390ede4a4ca794c307c3d574a44f/: meta.yaml
mlruns/747735610452924730/5c6d390ede4a4ca794c307c3d574a44f/tags/: mlflow.log-model.history  mlflow.runName
mlruns/747735610452924730/977caa6e76ec49a5a7b740d1bbbecc5f/: meta.yaml
mlruns/747735610452924730/977caa6e76ec49a5a7b740d1bbbecc5f/artifacts/: feature_importance_weight.json
mlruns/747735610452924730/a31cf5fc334e47b394fbad7c8461fd57/: meta.yaml
mlruns/747735610452924730/bd9eac86049f4d649019c358bd74e611/: meta.yaml
mlruns/747735610452924730/ea8a9b674cef475cab731d2d4e014c40/: meta.yaml
(+29 files in other folders)
