[tool.poetry]
name = "chrom-pred"
version = "0.1.0"
description = ""
authors = ["Ega2901 <mr.tuzharov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
jupyterlab = "^4.3.0"
mlflow = "^2.17.2"
polars = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
